PersonalDevOrg/force-app/main/default/objects/AWS_Photo_Gallery_Integration_Setting__c/AWS_Photo_Gallery_Integration_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AWS_Photo_Gallery_Integration_Setting</label>
</CustomObject>