PersonalDevOrg/force-app/main/default/objects/AWS_Photo_Gallery_Integration_Setting__c/fields/AWS_Bucket_Region__c.field-meta.xml
<CustomField>
    <fullName>AWS_Bucket_Region__c</fullName>
    <label>AWS_Bucket_Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>