PersonalDevOrg/force-app/main/default/objects/AWS_Photo_Gallery_Integration_Setting__c/fields/AWS_S3_Bucket_Name_For_Thumbnails__c.field-meta.xml
<CustomField>
    <fullName>AWS_S3_Bucket_Name_For_Thumbnails__c</fullName>
    <label>AWS_S3_Bucket_Name_For_Thumbnails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>