PersonalDevOrg/force-app/main/default/objects/AWS_Photo_Gallery_Integration_Setting__c/fields/Credential_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Credential_Expiration__c</fullName>
    <label>Credential_Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>