PersonalDevOrg/force-app/main/default/objects/AWS_Photo_Gallery_Integration_Setting__c/fields/Upload_Queue_Size__c.field-meta.xml
<CustomField>
    <fullName>Upload_Queue_Size__c</fullName>
    <label>Upload_Queue_Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>